added search function

--- a/index.html
+++ b/index.html
@@ -107,24 +107,17 @@
         </style>
 </head>
 <body>
-    <div class="addPopUp">
-            <div class="popUp">
-                <h1>this is a pop up</h1>
-            </div>
-    </div>
+
     <h1 id="greeting">Hello,<span id="user"></span></h1>
     <h3 style="text-align: center; font-size: 1.3em; padding-top: 10px;">ForestWell food inventory management system</h6>
     <div class="search">    
         <div>
             <label for="searchBar">Search</label>
             <input type="text" id="searchBar">
+            <button onclick="search()">search</button>
         </div>
     </div>
 
-    <div class="modify">
-        <button>ADD</button>
-        <button>FILTER</button>
-    </div>
 
     <div class="display" id="display">
 
