--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             }
         }
 
+        #msg{
+            justify-self: center;
+            align-self: center;
+        }
 
         /* CSS for item display*/
         .itemBox{
@@ -119,9 +123,7 @@
     </div>
 
 
-    <div class="display" id="display">
-
-    
+    <div class="display" id="display">    
     </div> <!--End of display container-->
 </div>
     <div class="theme">
@@ -130,11 +132,11 @@
         <button id="themeBtn">switch</button>
     </div>
     <div class="timer">
-        <h2 id="timer"></h2>
+        <h2 id="timer">time spent on system: 0 second(s)</h2>
     </div>
 </body>
 </html>
-<script src="food.js"></script>
+<!-- <script src="food.js"></script> -->
 <!-- <script defer src="greeting.js"></script> -->
 <script src="theme.js"></script>
 <script defer src="timer.js"></script>
