final code update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         }
         .historyWord{
             width: fit-content;
-            color: wheat;
+            color: black;
         }
 
 
@@ -102,6 +102,11 @@
                 color: var(--bgBoardTxt-color);
                 background-color: grey;
             }
+
+            .historyWord{
+            width: fit-content;
+            color: white;
+        }
         }
 
         #msg{
