forgot to uncomment link to greeter js

--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
 </html>
 <script src="inventoryJSON.js"></script>
 <script src="food.js"></script>
-<!-- <script defer src="greeting.js"></script> -->
+<script defer src="greeting.js"></script>
 <script src="theme.js"></script>
 <script defer src="timer.js"></script>
